# awkernel_sync

./: Cargo.toml  LICENSE  README.md  build.rs  loom.sh
src/: interrupt_guard.rs  lib.rs  mcs.rs  mutex.rs  mwait.rs  rwlock.rs  spinlock.rs
src/interrupt_guard/: aarch64.rs  rv32.rs  rv64.rs  std_common.rs  x86_64.rs
tests/: model_check_bravo_rwlock.rs  model_check_mcslock.rs  model_check_rwlock.rs
